mule-user-guide/v/3.4/defining-metadata-using-edit-fields.adoc
= Defining Metadata Using Edit Fields

When defining or updating input and output metadata for the different data types supported by Anypoint DataMapper, you will use one of several very similar editors to create the structure and define fields, elements and attributes. Any of these editors is opened by selecting *User Defined* for the metadata source, and then clicking *Edit Fields*.

image:image2013-4-10+12%3A54%3A45.png[image2013-4-10+12%3A54%3A45]

This document describes the use of the editor for key/value maps. The editors for other structured data are substantially similar, and the editors for flat data like CSV files are similar but simplified. 

[%header%autowidth.spread]
|===
|image:check-1.png[check-1] |This document assumes the reader is familiar with the DataMapper Transformer. Consult the link:/mule-user-guide/v/3.4/datamapper-user-guide-and-reference[DataMapper User Guide and Reference] document for details.

|===

== About the Examples

The illustrations used in this document are taken from the discussion "Shortcut: Creating Output Metadata based on Defined Input Metadata" in link:/mule-user-guide/v/3.4/defining-datamapper-input-and-output-metadata[Defining DataMapper Input and Output Metadata]. If you want to reproduce the tasks described here, follow the steps in the example in that discussion to set up your environment.

[%header%autowidth.spread]
|===
|image:/docs/images/icons/emoticons/check.png[image] |You can edit data structure definitions (i.e. fields) in an _existing_ DataMapper transformer within the *Input* and *Output* panes of its DataMapper View. Consult link:/mule-user-guide/v/3.4/updating-metadata-in-an-existing-mapping[Updating Metadata in an Existing Mapping] for details.

|===

== Adding a Field

. Click `contacts` to select the parent element for the new field. (This step does not apply when working with flat data like CSV or fixed width files.)
. Click the
image:/docs/s/en_GB/3391/c989735defd8798a9d5e69c058c254be2e5a762b.76/_/images/icons/emoticons/add.png[(plus)] icon in the upper-left corner of the editor panel to create a new field under the selected parent. Alternatively, right-click the existing parent and select *Add*.
image:3-2-edit.indiv.fields.png[3-2-edit.indiv.fields]
A new field is inserted.
. Click the field label to edit the name of the field, then press *Enter*.

+
image:4-2-edit.indiv.fields.png[4-2-edit.indiv.fields]
+

=== Alternative Method

. In the *Edit Map Fields* panel, right-click the parent element in the editor pane.
. Select *Add* to create a new field (see below, left; the new field is labelled `field0` ).
. Click the field label o edit the name of the field, then press *enter*.

== Renaming a Field

. To rename a field, click the field name.
. Type in the new field name, then press *enter*.

== Modifying a Field's Type

To change the type of a field:

. Click the field's type in the *Type* column.
. Use the drop-down menu to select a new field type. 

+
image:5-select.field.type.png[5-select.field.type]
+

. Click outside the type menu to deselect the type value.

== Deleting a Field

Use one of the following three methods to delete a field.

* Right-click the field name, then select *Remove* from the drop-down menu.
* Click to select the field, then press the red "X" icon in the upper-left corner of the editor panel.
* Click to select the field, then press *Delete* (not *Backspace*). (On a Mac keyboard, press *fn*+*delete*.)

== Changing the Order of Fields

To re-order the fields, such as changing the order of columns in a CSV file:

. Select the field to be moved to a new position.
. Click the up and down arrows until the field is in the desired position.
. Click *OK* when finished.
